package com.example.demo.dto

data class BookDto(
    val id: Long,
    val title: String,
    val price: Double
)